syntax = "proto3";

package computantis;

option go_package = "github.com/bartossh/Computantis/protobufcompiled";

message Spice {
    uint64 currency = 1;
    uint64 suplementary_currency = 2; 
}

message Transaction {
    string subject = 1;
    bytes data = 2;
    bytes hash = 3;
    uint64 createrd_at = 4;
    string receiver_address = 5;
    string issuer_address = 6;
    bytes receiver_signature = 7;
    bytes issuer_signature = 8;
    Spice spice = 9;
}

